Comments and UI updates

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 android:resource="@xml/weather_widget_info" />
         </receiver>
 
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".foreground.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
